Updates to jakarta, fixing other versions and add-open things